--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -114,10 +114,10 @@
       {% endif %}
       {% if author.wikipedia %}
         <li><a href="https://en.wikipedia.org/wiki/User:{{ author.wikipedia }}"><i class="fab fa-wikipedia-w" aria-hidden="true"></i> Wikipedia</a></li>
-{% endif %}
-<!--      {% if author.location %}
+      {% endif %}
+      {% if author.location %}
         <li><i class="fa fa-fw fa-map-marker" aria-hidden="true"></i> {{ author.location }}</li>
-	{% endif %} -->
+      {% endif %} 
     </ul>
   </div>
 </div>
