--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -54,16 +54,21 @@ layout: default
 
       <section class="page__content" itemprop="text">
         {{ content }}
-        {% if page.link %}<div><a href="{{ page.link }}" class="btn">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
+	{% if page.link %}<div><a href="{{ page.link }}" class="btn">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
 
       <footer class="page__meta">
+	      <h2 style="height:100; color:green; margin-bottom:1cm"> {{ page.date | date: "%Y-%m-%d %H:%M:%S"  }}    ---Written by {{ page.author }}</h2>
+	</tr>
+	</tr>
+	</tr>
+	</tr>
+	</tr>
         {% if site.data.ui-text[site.locale].meta_label %}
           <h4 class="page__meta-title">{{ site.data.ui-text[site.locale].meta_label }}</h4>
         {% endif %}
         {% include page__taxonomy.html %}
       </footer>
-
       {% if page.share %}{% include social-share.html %}{% endif %}
 
       {% include post_pagination.html %}
